Fix button spacing character cards

--- a/client/src/styles/character.scss
+++ b/client/src/styles/character.scss
@@ -4,3 +4,8 @@
   margin: 10px;
   padding: 10px;
 }
+
+.characterBtn {
+  display: flex;
+  justify-content: center;
+}
